# concept

./: CMakeLists.txt  ConceptConfig.cmake  concept-config.cmake
Imp/: CMakeLists.txt
Include/: CMakeLists.txt  Concept.hpp
include/: CMakeLists.txt  concept.hpp
